<resources>
    <string name="map_key" translatable="false">AIzaSyAIgzww5lFBA_2LBaRc-uW3DLtCgwY7A9M</string>
    <string name="app_name">Find Your Way</string>
    <string name="nombreProyecto">Find Your Way</string>
    <string name="user">Correu</string>
    <string name="password">Contrasenya</string>
    <string name="registrate">Registra\'t</string>
    <string name="iniSesion">Iniciar Sessió</string>
    <string name="imgGoogleMaps" translatable="false">Google Maps</string>
    <string name="imgFacebook" translatable="false">Facebook</string>
    <string name="imgInstagram" translatable="false">Instagram</string>
    <string name="imgGmail" translatable="false">Gmail</string>
    <string name="recuperar_pass">Recuperar Contrasenya</string>
    <string name="muestra_usuario" translatable="false">muestra_usuario</string>
    <string name="muestra_pass" translatable="false">muestra_pass</string>
    <string name="Cerrar_Sesion">Tancar sessió</string>
    <string name="btnCambiarIdioma">Idioma</string>
    <string name="ContDescLogoApp" translatable="false">Logo Find Your Way</string>
    <string name="ContDescImgFondoTop" translatable="false">"Imagen superior de fondo"</string>
    <string name="ContDescImgFondoBott" translatable="false">"Imagen inferior de fondo"</string>
    <string name="ContDescIconoMaps" translatable="false">"Icono de contacto Gmaps"</string>
    <string name="ContDescIconoWeb" translatable="false">Icono de contacto pagina web</string>
    <string name="ContDescIconoInsta" translatable="false">Icono de contacto Instagram</string>
    <string name="ContDescIconoMail" translatable="false">Icono de contacto Gmail</string>
    <string name="tituloRegistro">CREACIÓ COMPTE</string>
    <string name="tituloRegistroContent">CREACIÓ DEL COMPTE</string>
    <string name="txtTituloNombre">Nom d\'usuari:</string>
    <string name="nombreUsuario">Correu electrònic:</string>
    <string name="txtNombre">Ingressa el teu correu electronic</string>
    <string name="hintNombre">Escriu el teu correu</string>
    <string name="txtTituloPasswd">Contrasenya</string>
    <string name="txtPasswd">Ingressa la teva contrasenya</string>
    <string name="passwd">Contrasenya:</string>
    <string name="txtTituloNombreReal">Nom:</string>
    <string name="txtNombreReal">Nom real de l\'usuari</string>
    <string name="hintNombreReal">Escriu el teu nom</string>
    <string name="txtTituloEdad">Edat</string>
    <string name="txtEdadContent">Ingressa la teva edat</string>
    <string name="hintPasswd">Escriu la teva constrasenya</string>
    <string name="edad">Edat:</string>
    <string name="hindEdad">Edat</string>
    <string name="btnVolver">Tornar</string>
    <string name="btnRegistrar">Registrar-se</string>
    <string name="ImagenFondo">Imatge de fons de pantalla</string>
    <string name="btnRegistrarseContent">Crear compte</string>
    <string name="imgRegistrarseContent">Crear compte.</string>
    <string name="btnVolverContent">cancel·lar creació del compte</string>
    <string name="imgVolverContent">cancel·lar creació del compte</string>
    <string name="imgProyecto">Logo Find Your Way</string>
    <string name="menu_home">Les Meves Rutes</string>
    <string name="menu_nuevaRuta">Nova Ruta</string>
    <string name="menu_configuracionRuta">Configuració Ruta</string>
    <string name="menu_eliminarRuta">Delete Route</string>
    <string name="menu_perfil">El Meu Perfil</string>
    <string name="menu_configuracionApp">Configuració General</string>
    <string name="navigation_drawer_open" translatable="false">Obrir navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Tancar navigation drawer</string>
    <string name="nav_header_title" translatable="false">ERICK - USER</string>
    <string name="nav_header_subtitle" translatable="false">user@findyourway.com</string>
    <string name="action_settings">Configuració perfil</string>
    <string name="nav_header_desc">FOTO D USUARI</string>
    <string name="correoContent">Correu electronic del usuari</string>
    <string name="nomUsuarioContentNavegationDrawer">Nom d\'usuari</string>
    <string name="rv" translatable="false">RV</string>
    <string name="imgCancelar">cancelar</string>
    <string name="perfil">Usuari</string>
    <string name="tvTituloFragmentRuta">CONFIGURACIÓ DE RUTAS</string>
    <string name="tvNombreRuta">Introdueix el nom de la ruta:</string>
    <string name="etNombreRuta">Introdueix el nom de la ruta:</string>
    <string name="etDireccionRuta">Ingressa a la ubicació:</string>
    <string name="btnCancelarRuta">Cancel·lar</string>
    <string name="btnAnadirRuta">Afegir Ruta</string>
    <string name="btnAñadirNuevaRuta">Afegir Ruta</string>
    <string name="tvSubTitulo">Tria Una Opció</string>
    <string name="tvNuevaRuta">Añadir Nova Ruta</string>
    <string name="btnNuevaRuta">Nova</string>
    <string name="bntAñadirNuevaRuta">Nova Ruta</string>
    <string name="tvEliminarRuta">Eliminar Una Ruta</string>
    <string name="btnEliminarRuta">Eliminar</string>
    <string name="tvConfiguracionRuta">Configuració De Una Ruta</string>
    <string name="btnConfiguracionRuta">Configuració Ruta</string>
    <string name="tvNuevaRutaF">Nova Ruta</string>
    <string name="tvNombreNuevaRuta">Escriu el nom de la ruta:</string>
    <string name="etNombreNuevaRuta">exemple: casa d´ estiu</string>
    <string name="tvDescripcionRutaNueva">Escriu alguna descripció:</string>
    <string name="etDescripcionRutaNueva">casa d´estiu de Castelldefels</string>
    <string name="tvRutaNuevaRuta">Ecriu la ruta:</string>
    <string name="etRutaNuevaRuta">exemple: castelldefels</string>
    <string name="tvPaisRutaNueva">País:</string>
    <string name="etPaisRutaNueva">Espanya</string>
    <string name="tvCiudadRutaNueva">Ciutat:</string>
    <string name="etCiudadRutaNueva">Barcelona</string>
    <string name="btnGuradarConfiguracionRuta">Moficicar</string>
    <string name="tvTituloModificar_nombreR">Nom:</string>
    <string name="tvTituloModificar_descripcionR">Descripció:</string>
    <string name="tvTituloModificar_rutaR">Ruta:</string>
    <string name="tvTituloModificar_paisR">País:</string>
    <string name="tvTituloModificar_ciudadR">Ciutat:</string>
    <string name="etModificarRuta_nombre">Ingressa el nom</string>
    <string name="etModificarRuta_descripcion">Ingressa la descripció</string>
    <string name="etModificarRuta_ruta">Ingressa la ruta</string>
    <string name="etModificarRuta_pais">Ingressa el país</string>
    <string name="etModificarRuta_ciudad">Ingressa la ciutat</string>
    <string name="sesion">Sessió</string>
    <string name="bntLogOut">Tancar sessió</string>
    <string name="adiosUsuario">Fins aviat</string>
    <string name="holaUsuario">Benvingut</string>
    <string name="inisioSFallido">Inici de sessió fallida</string>
    <string name="credencialesFallidas">Credencials incorrectes, si us plau ompli tots els camps</string>
    <string name="credencialesIcorrectas">Credencials incorrectes</string>
    <string name="cuentaCreada">Compte registrada</string>
    <string name="registroFallido">Registre de compte fallit</string>
    <string name="emailInvalido">Email invàlid</string>
    <string name="rutaELiminadaCorrectamente">Ruta eliminada correctament.</string>
    <string name="titulo_perfil_usuario">EL MEU PERFIL</string>
    <string name="nombreUsuario_perfil">Nom:</string>
    <string name="etNombreUsuario_perfil">El meu nom…</string>
    <string name="titulo_edad_perfil">Edat:</string>
    <string name="hintEdad_perfil">La meva edat es..</string>
    <string name="txtTituloDireccion">Direcció:</string>
    <string name="hintDireccion_perfil">La meva direcció es…</string>
    <string name="btnRegistrar_pefil">Guardar Perfil</string>
    <string name="btnModificar_pefil">Modificar Perfil</string>
    <string name="tvTituloNombreruta">Nom:</string>
    <string name="tvTituloDescRuta">Descripció:</string>
    <string name="tvTituloRuta">Ruta:</string>
    <string name="tvTituloDescRutaCompleta">Descripció:</string>
    <string name="tvTituloRutaCompleta">Ruta:</string>
    <string name="tvTituloCiudadRutaCompleta">Ciutat:</string>
    <string name="tvTituloPaisRutaCompleta">País:</string>
    <string name="spinerTipSexo">Sexe:</string>
    <string name="title_activity_maps_navegacion">Mapa</string>
    <string name="localizacionUsuario">La teva posició</string>
    <string name="condicionSi">Si</string>
    <string name="condicionNo">No</string>
    <string name="tituloCambiarIdioma">Canviar l`idioma</string>
    <string name="tvTituloCatalan">Català</string>
    <string name="tvTituloCastellano">Castellà</string>
    <string name="tvTituloEEUU">Anglès</string>
    <string name="menu_mi_ubicacion">La meva ubicació</string>
    <string name="tvTituloMiUbicacionActual">La meva ubicació</string>
    <string name="tvTituloMiDireccion">La meva direcció actual:</string>
    <string name="tvTituloMisCoordenadas">Les meves coordenades actuals:</string>
    <string name="tvTituloLongitud">Longitud:</string>
    <string name="tvTituloLatitud">Latitud:</string>
    <string name="btnMostrarGPS">GPS</string>
    <string name="btnMostrarMapaUbicacionActual">Mostar Mapa</string>
    <string name="normal_map">Mapa Normal</string>
    <string name="hybrid_map">Map Híbrid</string>
    <string name="satellite_map">Mapa Satèl·lit</string>
    <string name="terrain_map">Mapa Terreny</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="title_activity_maps">HOLAA</string>
    <string name="tituloEscogeIdioma">Tria l`idioma</string>
    <string name="eliminarRutaElert">Vols eliminar aquesta ruta?</string>
    <string name="opcion1EliminarRuta">Si</string>
    <string name="opcion2EliminarRuta">No</string>
    <string name="sinModificaciones">Sense modificacións.</string>
    <string name="obligatorioRegister">El usuari, constrasenya, nom i edat son obligatoris.</string>
    <string name="passMenor">La contrasenya te que ser més gran de 6 caracteres.</string>
    <string name="cacenlaGeneral">Cancelar</string>
    <string name="sinRutas">No tens rutes creades, si us plau afegeix una.</string>
    <string name="nomInvalidoModificarPerfil">Nom invàlid, introdueixi només lletres: </string>
    <string name="edadInvalidaModificarPerfil">Edat invàlida, (5 - 110): </string>
    <string name="nomModificadoCModificarPerfil">Nom modificat correctament: </string>
    <string name="edadModificadaCModificarPerfil">Edat modificada correctament: </string>
    <string name="sexoModificadoCModificarPerfil">Sexe modificat correctament: </string>
    <string name="direccionModificadaCModificarPerfil">Direcció modificada correctament: </string>
    <string name="nombreInvalidoModificarRuta">Nom invàlid, introdueixi només lletres:</string>
    <string name="rutaInvalidaModificarRuta">Ruta invàlida, introdueixi només lletres: </string>
    <string name="paisInvalidoModificarRuta">Pais invàlid, introdueixi només lletres: </string>
    <string name="ciudadInvalidoModificarRuta">Ciutat invàlid, introdueix només lletres: </string>
    <string name="nombreModificadoCModificarRuta">Nom modificat correctament: </string>
    <string name="descripcionModificadoCModificarRuta">Descripció modificada correctament: </string>
    <string name="rutaModificadaCModificarRuta">Ruta modificada correctament: </string>
    <string name="paisModificadoCModificarRuta">País modificat correctament: </string>
    <string name="ciudadModificadaCModificarRuta">Ciutat modificada correctament: </string>
    <string name="btnNuevaRutaContentD">Afegir una nova ruta</string>
    <string name="btnConfigurarRutaContentD">Configurar una ruta</string>
    <string name="btnEliminarRutaContentD">Eliminar una ruta</string>
</resources>