<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="cat.copernic.erick.projectm07.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="cat.copernic.erick.projectm07.ui.ConfiguracionRutas.ConfiguracionRutasFragment"
        android:label="@string/menu_configuracionRuta"
        tools:layout="@layout/fragment_configuracion_rutas" />

    <fragment
        android:id="@+id/nav_mi_ubicacion"
        android:name="cat.copernic.erick.projectm07.ui.miUbicacion.miUbicacionFragment"
        android:label="@string/menu_mi_ubicacion"
        tools:layout="@layout/fragment_mi_ubicacion" />

    <fragment
        android:id="@+id/nav_share"
        android:name="cat.copernic.erick.projectm07.ui.Perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_send"
        android:name="cat.copernic.erick.projectm07.ui.ConfiguracionGeneral.ConfiguracionGeneralFragment"
        android:label="@string/menu_configuracionApp"
        tools:layout="@layout/fragment_configuracion_general" />

</navigation>