<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_build_black_24dp"
            android:title="@string/menu_nuevaRuta" />
        <!-- <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" /> -->
    </group>

    <item android:title="@string/perfil">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_portrait_black_24dp"
                android:title="@string/menu_perfil" />
           <!-- <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" /> -->

        </menu>
    </item>
    <!--<item android:title="@string/sesion">
        <menu>
            <item
                android:id="@+id/nav_logOut"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/bntLogOut" />
        </menu>
    </item>-->

</menu>
